Fixed: each() on arrays not available in 5.008

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Algorithm-Cluster-Thresh
-version = 0.04
+version = 0.05
 author  = Chad A. Davis <chad.a.davis@gmail.com>
 license = Perl_5
 copyright_holder = Chad A. Davis
@@ -38,10 +38,11 @@ fake_home = 1       ; fakes $ENV{HOME} just in case
 ;[Subversion::Tag]   ; Tag subversion releases
 ;[Bugtracker]        ; defaults to RT
 ; Set homepage and repository and bugtracker
-[MetaResourcesFromGit]
-homepage = http://github.com/%a/%r
-bugtracker.web = https://github.com/%a/%r/issues
-
+;[MetaResourcesFromGit]
+;homepage = http://github.com/%a/%r
+;bugtracker.web = https://github.com/%a/%r/issues
+[GithubMeta]
+issues = 1
 
 [MetaYAML]          ; generate META.ym
 [MetaJSON]          ; generate META.json
